--- a/package.json
+++ b/package.json
@@ -9,9 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "@sanity/client": "^6.14.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.29.1",
+    "@stripe/stripe-js": "^3.0.5",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.2.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "next-sanity": "^7.1.4",
+    "next-sanity-image": "^6.1.1",
+    "persist": "^0.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
+    "sanity": "^3.29.1",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^14.17.0",
+    "styled-components": "^6.1.8",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
